[package]
name = "usvc_users"
version = "0.1.0"
authors = ["riendegris <matt@area403.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = "2.33.1"
config = "0.10"
futures = "0.3"
juniper = { git="https://github.com/graphql-rust/juniper.git", features = ["chrono"] }
juniper_warp = { git="https://github.com/graphql-rust/juniper.git" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slog = "2.5"
slog-term = "2.5"
slog-async = "2.5"
snafu = "0.6"
tokio = { version = "0.2.13", features = [ "sync", "rt-core", "macros", "fs" ] }
warp = { version = "0.2.3" }

[lib]
name = "users"
path = "src/lib.rs"

[[bin]]
name = "service"
path = "src/main.rs"
